fibercop-custom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fibercop-custom-all-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: cpeh2640.fibercop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fibercop-cpe-sim
                port:
                  number: 8080
